--- a/febasics/index.html
+++ b/febasics/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles/style.css">
-  <script src="./scripts/main.js"></script>
+  <script src="./scripts/main.js" async defer></script>
 </head>
 <body>
   <!-- Header -->
